# DEVICE--OWNER

./: .gitignore  BUILD_INSTRUCTIONS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  ENCRYPTION_IMPLEMENTATION_SUMMARY.md  HEARTBEAT_FIXES_SUMMARY.md  HEARTBEAT_TROUBLESHOOTING.md  KEYSTORE_SETUP_REFERENCE.txt  PAYO_KEYSTORE_INFO.txt  README.md  app-release-checksums.txt  build.ps1  build_and_prepare_provisioning.ps1  build_clean_fresh.ps1  build_clean_rebuild.ps1  build_force.ps1  build_memory_optimized.ps1  build_release.ps1  build_release_no_minify.ps1  build_release_optimized.ps1  build_simple.ps1  calculate_checksum.ps1  check_heartbeat_status.sh  create_keystore_fresh.ps1  emergency_unlock.ps1  emergency_unlock.sh  firmware_security_test.kt  firmware_security_verification_test.kt  get_certificate_pin.ps1  get_ssl_pin.sh  gradle_optimized.properties  keystore.properties  keystore.properties.example  provisioning-config-no-wifi.json  provisioning-config.json  release-keystore-new.jks  release-keystore.jks  server_certificate_commands.sh  settings.gradle.kts  test_build.ps1  (+3 more)
app/: build.gradle.kts  proguard-rules.pro
app/keystore/: payo-release.keystore
app/src/main/cpp/: CMakeLists.txt  firmware_security_jni.cpp
docs/: 0.0-TECHNOLOGY-AND-INDEX.md  00-START-HERE.md  01-device-owner-overview.md  02-GETTING-STARTED.md  02-features-implemented.md  03-FEATURES-GUIDE.md  03-compatibility.md  04-device-installation.md  05-device-registration.md  06-apis.md  07-device-heartbeat.md  08-hard-lock-and-soft-lock.md  09-device-tamper.md  1.0-DEVICE-OWNER-OVERVIEW.md  10-local-databases.md  10.0-LOCAL-DATABASES.md  11-device-logs-and-bugs.md  11.0-DEVICE-LOGS-AND-BUGS.md  12-agent-update.md  12.0-AGENT-UPDATE.md  13-services.md  13.0-SERVICES.md  14-folder-structure.md  14.0-FOLDER-STRUCTURE.md  15.0-FRP.md  16.0-DEACTIVATION.md  17.0-KNOX-GUARD-INTEGRATION-ROADMAP.md  18.0-ADVANCED-ENTERPRISE-SECURITY-ROADMAP.md  19.0-DEVICE-DATA-ENCRYPTION-AND-DECRYPTION.md  2.0-FEATURES-IMPLEMENTED.md  3.0-COMPATIBILITY.md  4.0-DEVICE-INSTALLATION.md  5.0-DEVICE-REGISTRATION.md  6.0-APIS.md  7.0-DEVICE-HEARTBEAT.md  8.0-HARD-LOCK-AND-SOFT-LOCK.md  9.0-DEVICE-TAMPER.md  DELIVERY_NOTES.txt  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_ROADMAP_IMPROVEMENT.md  (+42 more)
docs/android-firmware-security-complete/: IMPLEMENTATION_SUMMARY.md  MANIFEST.txt  QUICK_VERIFICATION_CARD.md  README.md  VERIFICATION_TESTING_GUIDE.md  install.sh  project_structure.txt
docs/android-firmware-security-complete/device-owner-integration/config/: CMakeLists.txt  build.gradle.kts
docs/develop/: DEVELOPMENT_ROADMAP_IMPROVEMENT.md
docs/feature-4.0/: ARCHITECTURE.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_REPORT.md  IMPROVEMENTS.md  QUICK_SUMMARY.md  STATUS.txt
docs/feature-4.1/: DOCUMENTATION_INDEX.md  IMPLEMENTATION_REPORT.md
gradle/: libs.versions.toml
keystore/: payo-release.keystore
scripts/: build_and_checksum.ps1  validate_heartbeat.sh  verify_provisioning_setup.ps1
tests/: README.md
tools/: README.md
(+890 files in other folders)
